Addition of DATEPART, YEAR, MONTH and DAY functions to Date Functions Guide plus some grammar fixes

--- a/docs/sql/sfmc-sql-join.mdx
+++ b/docs/sql/sfmc-sql-join.mdx
@@ -284,7 +284,7 @@ As you can see in the above example, the `UNION` doesn't require any relationshi
 2. Both queries have the same order of columns.
 3. Columns in both queries have the same data types.
 
-The names do not have to be the same; however, it is best practice to match the aliases for readability purposes.
+The names do not have to be the same. You don't even have to add aliases for static values. However, it is best practice to match the aliases across all queries for readability purposes.
 
 To simplify the difference between `JOIN` and `UNION`:
 
