Addition of Interaction Studio Guardian feature on demand

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -97,6 +97,12 @@ Account Utilisation Report | Ad hoc request to get the current utilisation statu
 
 There are some additional analytics and tracking related features within [Automation Studio Features](#automation-studio-features) - Data Extract Types. For example Include User Agent Information, Unique Clicks and Opens, Campaing ID and more.
 
+## Interaction Studio Features
+
+Feature Name | Description | Documentation | Type
+-- | -- | -- | --
+Guardian | Continuously monitors additional metrics like clicks, events and impressions gathered from your site, web application, or mobile app. | [Interaction Studio Guardian](https://doc.evergage.com/display/EKB/Guardian) | Free
+
 ## Journey Builder Features
 
 Feature Name | Description | Documentation | Type
