--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -18,7 +18,7 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 - [If & Switch](./ssjs/ssjs-if-and-switch.mdx)
 - [Loops](./ssjs/ssjs-loops.mdx)
 - [Debugging](./ssjs/debugging-ssjs.mdx)
-- [Performance](./ssjs/ssjs-vs-ampscript.mdx)
+- [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
 
 ### SSJS Use Cases
 
