--- a/docs/ssjs/ssjs-vs-ampscript-performance.mdx
+++ b/docs/ssjs/ssjs-vs-ampscript-performance.mdx
@@ -34,8 +34,10 @@ Execution time differences are very small - at a few or dozen milisecond here or
 
 But for scripting in communication assets (Emails, SMS, Pushes, etc) that will be send to huge volumes or when the previously mentioned use cases apply the script to a big data extensions, it might have significant impact and help you optimize your Marketing Cloud greatly.
 
-
-
+1. For scripting in time-critical assets (Emails, SMS, Pushes) go with AMPScript. It is much more optimized for the most popular use cases in this space.
+2. For scripting in other assets (Landing Pages, Automation Studio) it depends on the use case. As a rule of thumb, AMPScript might be a bit more optimized, but lacks flexibility and power (arrays, objects, try/catch, etc.).
+3. When splitting your SSJS code block, try not to do it within a long loop ([Code Block Breaking](#code-block-breaking)).
+4. However, if AMPScript have a ready-to-use function that is not available in SSJS, it might be worth to inject AMPScript into your SSJS. The execution time impact of code splitting might be much smaller then that of the complex code necessary to duplicate this function ([ProperCase](#propercase)). For functions available in both languages, in most cases it's better to stay with the one already used ([LowerCase & UpperCase](#lowercase--uppercase)).
 
 ## Methodology
 
@@ -53,9 +55,11 @@ For testing the execution speed of AMPScript block solutions, I'm using the SSJS
 
 ## Performance Test Cases
 
-### SSJS & AMPScript Context Switching
+### Code Block Breaking
 
-First thing I wanted to test was the cost of context switching between SSJS and AMPScript. Understanding the execution time impact of the context switch is not only necessary to make valid conclusions from future tests, but also can help decide on the best approach when coding a personalisation. To check it, I created four scenarios that time various levels of context switch.
+First thing I wanted to test was the cost of breaking out of code block between SSJS and AMPScript.
+
+Understanding the execution time impact of that context switch is not only necessary to make valid conclusions from future tests, but also can help decide on the best approach when coding a personalisation.
 
 <Tabs
     defaultValue='ssjs'
@@ -64,6 +68,7 @@ First thing I wanted to test was the cost of context switching between SSJS and 
         {label: 'SSJS + HTML', value: 'html'},
         {label: 'SSJS + AMPScript', value: 'ampinssjs'},
         {label: 'AMPScript', value: 'ampscript'},
+        {label: 'AMPScript x2', value: 'ampscript2'},
     ]}
 >
 <TabItem value='ssjs'>
@@ -108,7 +113,7 @@ for (var i = 0; i < 10000; i++) {
 </TabItem>
 <TabItem value='ampscript'>
 
-For final scenario I put the for loop in the AMPScript context. This makes the SSJS breaking impact count only once per 10 000 executions, making it irrelevant for the final average.
+Then I put the for loop in the AMPScript context. This makes the SSJS breaking impact count only once per 10 000 executions, making it irrelevant for the final average.
 
 ```
 </script>
@@ -122,9 +127,38 @@ For final scenario I put the for loop in the AMPScript context. This makes the S
 ```
 
 </TabItem>
+<TabItem value='ampscript2'>
+
+For final scenario I decided to break out of AMPScript context within an AMPScript loop, as this is popular way for creating dynamic content in Marketing Cloud.
+
+```
+</script>
+    %%[
+    FOR @current = 1 TO @Counter DO
+        VAR @d
+        ]%%
+
+        %%[
+    NEXT @current
+    ]%%
+<script runat="server">
+```
+
+</TabItem>
 </Tabs>
 
-### Proper Case
+#### Outcomes
+
+SSJS | SSJS + HTML | SSJS + AMPScript | AMPScript | AMPScript x2
+-- | -- | -- | -- | --
+0.0016 | 0.1453 | 0.1422 | 0.0015 | 0.0016
+
+#### Sum Up
+
+1. Breaking out of SSJS code block is impacting execution time. It is not a problem for AMPScript.
+2. Be very cautious of breaking out of SSJS code block within [loop](./ssjs-loops.mdx), as this might have enormous impact on the execution time.
+
+### ProperCase
 
 What should you use, when you want to change a string to Proper Case? As there is no single function in SSJS for that, I compared two pure SSJS approaches (`split`/`join` & `replace` with RegEx) with [AMPScript in SSJS](./ssjs-snippet-ampscript-in-ssjs.mdx) and (nearly) pure AMPScript.
 
@@ -200,26 +234,27 @@ SET @Response = ProperCase(@Sentence)
 </TabItem>
 </Tabs>
 
+#### Outcomes
+
 Sentence | SSJS Split | SSJS Replace | AMPScript in SSJS | AMPScript
 -- | -- | -- | -- | --
-1 | 0.0969 | 0.0735 | 0.3828 | 0.1281
-2 | 0.1359 | 0.1125 | 0.3797 | 0.1281
-3 | 0.1766 | 0.1531 | 0.3829 | 0.1281
-4 | 0.2172 | 0.1968 | 0.3797 | 0.1297
-5 | 0.2547 | 0.2359 | 0.3891 | 0.1313
-6 | 0.2937 | 0.275 | 0.3797 | 0.1281
-7 | 0.3344 | 0.3188 | 0.389 | 0.1313
-8 | 0.3812 | 0.3578 | 0.3813 | 0.1312
-9 | 0.411 | 0.3922 | 0.3843 | 0.1297
-10 | 0.45 | 0.436 | 0.3797 | 0.1312
+1 | 0.0968 | 0.0782 | 0.3686 | 0.0032
+2 | 0.1376 | 0.1186 | 0.3688 | 0.0032
+3 | 0.175 | 0.1594 | 0.3874 | 0.0032
+4 | 0.2218 | 0.2032 | 0.375 | 0.0062
+5 | 0.2562 | 0.247 | 0.3686 | 0.0064
+6 | 0.2968 | 0.2812 | 0.372 | 0.0062
+7 | 0.3344 | 0.2844 | 0.375 | 0.003
+8 | 0.372 | 0.2874 | 0.372 | 0.003
+9 | 0.4126 | 0.3312 | 0.3718 | 0.0064
+10 | 0.4124 | 0.342 | 0.375 | 0.0064
 
-Sum Up:
+#### Sum Up:
 
-1. When working with arrays or regex replace, SSJS execution time extends with each additional word. However, AMPScript execution time is constant.
-2. For one-two word sentences (think First Name, Last Name, Title, etc.) SSJS Replace with Regex and AMPScript are comparable. Use whichever language you are using for the rest of your code.
-3. For anything longer, AMPScript is much better - using it even in SSJS might be great way to optimize speed.
-4. Despite [AMPScript in SSJS](./ssjs-snippet-ampscript-in-ssjs.mdx) doing much worse then pure AMPScript, it beats pure SSJS at long sentences (10+ words). As mentioned in the [article](./ssjs-snippet-ampscript-in-ssjs.mdx) - use that approach only when there is no other option.
-5. SSJS Replace might be the option to choose even despite performance, if you want more flexibility (for example, changing that `Nine-ten` to `Nine-Ten`).
+1. Pure AMPScript execution time for ProperCase scenario murders SSJS.
+2. When working with arrays or regex replace, SSJS execution time extends with each additional word. However, AMPScript execution time is constant.
+3. Despite [AMPScript in SSJS](./ssjs-snippet-ampscript-in-ssjs.mdx) doing levels-of-magnitude worse then pure AMPScript, it will be a better choice then pure SSJS for long sentences (10+ words). As mentioned in the [article](./ssjs-snippet-ampscript-in-ssjs.mdx) - use that approach only when there is no other option.
+4. SSJS Replace might be the option to choose even despite performance, if you want more flexibility (for example, changing that `Nine-ten` to `Nine-Ten`).
 
 ### LowerCase & UpperCase
 
@@ -293,18 +328,19 @@ This approach has impact on the exact number of miliseconds, but does not change
 </TabItem>
 </Tabs>
 
+#### Outcomes
+
 Sentence | SSJS Method | SSJS Function | AMPScript in SSJS | AMPScript
 -- | -- | -- | -- | --
-1 | 0.0141 | 0.0203 | 0.3875 | 0.1297
-2 | 0.014 | 0.0188 | 0.3859 | 0.1297
-3 | 0.0125 | 0.0187 | 0.3922 | 0.1297
-4 | 0.0125 | 0.0203 | 0.3907 | 0.1297
-5 | 0.0125 | 0.0203 | 0.3907 | 0.1328
-6 | 0.0125 | 0.0203 | 0.3907 | 0.1297
-7 | 0.0125 | 0.0188 | 0.3953 | 0.1312
-8 | 0.0141 | 0.0188 | 0.389 | 0.1313
-9 | 0.014 | 0.0188 | 0.3875 | 0.1312
-10 | 0.0141 | 0.0187 | 0.3906 | 0.1313
+1 | 0.014 | 0.0203 | 0.3625 | 0.0032
+2 | 0.0125 | 0.0187 | 0.3625 | 0.0031
+3 | 0.0125 | 0.0188 | 0.3625 | 0.0031
+4 | 0.0125 | 0.0188 | 0.3687 | 0.0016
+5 | 0.0125 | 0.0187 | 0.3641 | 0.0015
+6 | 0.0125 | 0.0188 | 0.3641 | 0.0031
+7 | 0.0125 | 0.0187 | 0.3625 | 0.0032
+8 | 0.0125 | 0.0187 | 0.3672 | 0.0031
+9 | 0.0125 | 0.0204 | 0.3593 | 0.0032
+10 | 0.014 | 0.0203 | 0.3625 | 0.0016
 
-
-
+#### Sum up
